--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,7 @@
     <link rel="alternate" href="rss.xml" type="application/rss+xml" title="RSS">
 </head>
 <body>
-    <img src="./img/images.png" alt="RSS">
+    <img src="./img/images.png" alt="RSS" sizes="">
+    <img src="https://picsum.photos/id/1025/600/400" alt="">
 </body>
 </html>
