Añadir logo y texto

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <link rel="alternate" href="rss.xml" type="application/rss+xml" title="RSS">
 </head>
 <body>
-    <img src="./img/images.png" alt="RSS" sizes="">
-    <img src="https://picsum.photos/id/1025/600/400" alt="">
+    <h1>Games online</h1>
+    <article>
+        <h2>League of legends</h2>
+        <p>League of legends (LOL) is a moba game </p>
+    </article>
+    <article>
+        <h2>The binding of Isaac</h2>
+        <p>The binding of Isaac (TBOI)  </p>
+    </article>
+    <a href="http://"></a><img src="./img/images.png" alt="Logo RSS" width="100px">
 </body>
 </html>
