--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <h2>The binding of Isaac</h2>
         <p>The binding of Isaac (TBOI)  </p>
     </article>
-    <a href="http://"></a><img src="./img/images.png" alt="Logo RSS" width="100px">
+    <a href="https://antropodus17.github.io/Rss/feed/feed.rss"><img src="./img/images.png" alt="Logo RSS" width="100px"></a>
 </body>
 </html>
