Contenido en el fedd

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="alternate" href="rss.xml" type="application/rss+xml" title="RSS">
 </head>
 <body>
-    <h1>Games online</h1>
+    <h1>VideoGames</h1>
     <article>
         <h2>League of legends</h2>
         <p>League of legends (LOL) is a moba game </p>
